--- a/src/templates/application.handlebars
+++ b/src/templates/application.handlebars
@@ -14,6 +14,7 @@
       <li>{{#link-to 'mods'}}Mod Center{{/link-to}}</li>
       <li>{{#link-to 'profile' App.user.id}}Profile{{/link-to}}</li>
       <li>{{#link-to 'ladder' App.settings.defaultLadder}}Ladder{{/link-to}}</li>
+      <li>{{#link-to 'logout'}}Log Out{{/link-to}}</li>
     </ul>
     <div class="col-sm-3 col-md-3 pull-right">
       <form class="navbar-form" role="search">
